tests/cases/errors/event_bit_select_unsupported/main.sv
module Top;
  logic [7:0] data;
  initial begin
    @(data[3]);
  end
endmodule
